Binary opstacks can now be loaded from LiquidHex.
They are injected via window.LiquidHex from the LiquidHex process, when the visualization is loaded from within LiquidHex.

--- a/src/vizualizer/vizualizer.html
+++ b/src/vizualizer/vizualizer.html
@@ -7,12 +7,20 @@
     <meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
     <link rel="stylesheet" type="text/css" href="style.css">
   </head>
-  <body>
+  <body id="boppy">
 
     <div class="controls">
       <img id="logo" src="skyleaf_logo_dark.png" height="36" width="36" />
       <span id="source">Skyleaf Design</span id="source">
     </div>
+
+    <script>
+      window.LiquidHex = {
+        stack: [],
+        stack_data: new Uint8Array(),
+        values: []
+      };
+    </script>
 
     <script src="bundle.js"></script>
     <script src="three.js"></script>
@@ -51,9 +59,9 @@
         document.body.appendChild(container);
 
         //camera = new THREE.OrthographicCamera(window.innerWidth / -2, window.innerWidth / 2, window.innerHeight / 2, window.innerHeight / -2, -10000, 10000);
-        camera = new THREE.PerspectiveCamera(70, window.innerWidth / window.innerHeight, 1, 10000);
-        camera.position.z = 500
-        camera.position.y = 400
+        camera = new THREE.PerspectiveCamera(70, window.innerWidth / window.innerHeight, 1, 15000);
+        camera.position.z = 3000
+        camera.position.y = 2000
         //camera.zoom = 2
 
         controls = new THREE.OrbitControls(camera);
@@ -68,7 +76,7 @@
         controls.dynamicDampingFactor = 0.3;
 
         scene = new THREE.Scene();
-        scene.fog = new THREE.Fog(0, 200, 4000);
+        scene.fog = new THREE.Fog(0, 200, 14000);
 
         renderer = new THREE.WebGLRenderer({antialias: false});
         renderer.setPixelRatio(window.devicePixelRatio);
